# flipo5-go

./: .env.example  .gitignore  CODE_REVIEW.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  go.mod  go.sum
backend/cmd/api/: main.go
backend/deploy/: Caddyfile.example  README.md  RESEND-SUPABASE.md  deploy-hetzner.ps1  deploy-hetzner.sh
backend/deploy/email-templates/: README.md  confirm-signup.html  reset-password.html
backend/internal/api/: chat_projects.go  handlers.go  share.go
backend/internal/auth/: jwt.go  supabase.go  supabase_test.go
backend/internal/cache/: redis.go
backend/internal/config/: config.go
backend/internal/middleware/: admin.go  auth.go  context.go  context_test.go  ratelimit.go  supabase.go
backend/internal/queue/: handlers.go  r2mirror.go  tasks.go
backend/internal/replicate/: client.go
backend/internal/storage/: s3.go
backend/internal/store/: chat_projects.go  files.go  jobs.go  pgx.go  products.go  projects.go  schema.sql  shares.go  threads.go  translations.go  user_profiles.go  users.go
backend/internal/stream/: stream.go
deploy/: STUDIO_EDITING.md  build-linux.ps1
deploy/hetzner/: README.md  deploy-docker.ps1  deploy-docker.sh  deploy.sh  flipo5-api.service  git-remove-zip-from-history.ps1  setup.sh
frontend/: .env.example  .env.vercel.example  AUDIT.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/public/: manifest.json
services/vectorizer/: .dockerignore  Cargo.toml  Dockerfile
services/vectorizer/src/: main.rs
(+121 files in other folders)
