[package]
name = "flipo5-vectorizer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower-http = { version = "0.5", features = ["limit"] }
vtracer = "0.6"
visioncortex = "0.8"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
